CREATE TABLE IF NOT EXISTS leitor (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, nome VARCHAR(255) NOT NULL, email VARCHAR(255) NOT NULL UNIQUE);
CREATE TABLE IF NOT EXISTS carteirinha (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, leitor_id INTEGER NOT NULL UNIQUE REFERENCES leitor(id), numero VARCHAR(255) NOT NULL UNIQUE, emitida_em DATE NOT NULL);
CREATE TABLE IF NOT EXISTS livro (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, titulo VARCHAR(255) NOT NULL, isbn VARCHAR(255) NOT NULL UNIQUE);
CREATE TABLE IF NOT EXISTS autor (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, nome VARCHAR(255) NOT NULL);
CREATE TABLE IF NOT EXISTS livro_autor (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, livro_id INTEGER NOT NULL REFERENCES livro(id), autor_id INTEGER NOT NULL REFERENCES autor(id), UNIQUE(livro_id, autor_id));
CREATE TABLE IF NOT EXISTS exemplar (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, livro_id INTEGER NOT NULL REFERENCES livro(id), codigo VARCHAR(255) NOT NULL UNIQUE);
CREATE TABLE IF NOT EXISTS emprestimo (id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, leitor_id INTEGER NOT NULL REFERENCES leitor(id), exemplar_id INTEGER NOT NULL REFERENCES exemplar(id), realizado_em DATE NOT NULL, previsto_para DATE NOT NULL CHECK(previsto_para >= realizado_em), devolvido_em DATE CHECK(devolvido_em IS NULL OR devolvido_em >= realizado_em));
ALTER TABLE emprestimo ADD COLUMN IF NOT EXISTS exemplar_ativo_id INTEGER GENERATED ALWAYS AS (CASE WHEN devolvido_em IS NULL THEN exemplar_id ELSE NULL END);
CREATE UNIQUE INDEX IF NOT EXISTS um_emprestimo_ativo ON emprestimo(exemplar_ativo_id);
